change the package name

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "draw.simplemobiletools.com"
+        applicationId "com.simplemobiletools.draw"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
