--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,11 +23,18 @@
 
         <activity
             android:name=".activities.AboutActivity"
-            android:label="@string/about"/>
+            android:label="@string/about"
+            android:parentActivityName=".activities.MainActivity"/>
 
         <activity
             android:name=".activities.LicenseActivity"
-            android:label="@string/third_party_licences"/>
+            android:label="@string/third_party_licences"
+            android:parentActivityName=".activities.AboutActivity"/>
+
+        <activity
+            android:name=".activities.SettingsActivity"
+            android:label="@string/settings"
+            android:parentActivityName=".activities.MainActivity"/>
 
         <provider
             android:name="android.support.v4.content.FileProvider"
