--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.simplemobiletools:commons:2.16.1'
     compile 'com.jakewharton:butterknife:8.0.1'
     compile 'com.github.yukuku:ambilwarna:2.0.1'
 
