--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,16 @@
 
         <activity
             android:name=".activities.MainActivity"
-            android:configChanges="orientation"/>
+            android:configChanges="orientation">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+
+                <data android:mimeType="image/*"/>
+            </intent-filter>
+        </activity>
 
         <activity
             android:name="com.simplemobiletools.commons.activities.AboutActivity"
