--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "28.0.3"
 
     defaultConfig {
-        applicationId "com.simplemobiletools.draw"
+        applicationId "com.simplemobiletools.draw.pro"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 41
