--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ android {
         versionCode 46
         versionName "6.0.4"
         setProperty("archivesBaseName", "draw")
+        vectorDrawables.useSupportLibrary = true
     }
 
     signingConfigs {
@@ -50,5 +51,5 @@ android {
 }
 
 dependencies {
-    implementation 'com.simplemobiletools:commons:5.13.14'
+    implementation 'com.simplemobiletools:commons:5.16.17'
 }
