--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,5 +57,6 @@ android {
 }
 
 dependencies {
-    implementation 'com.simplemobiletools:commons:5.28.23'
+    implementation 'com.simplemobiletools:commons:5.30.12'
+    implementation "androidx.print:print:1.0.0"
 }
